--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,74 @@
-$primary-color: #444;
+@import "config";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 body {
+  @include background();
+  height: 100%;
   background: $primary-color;
+  color: $text-color;
+  font-family: $primary-font-family;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+
+  &.text-lg {
+    font-size: 5rem;
+  }
+
+  &.text-sm {
+    margin-bottom: 2rem;
+    padding: 0.1rem 0.5rem;
+  }
+}
+
+a {
+  color: $text-color;
+  font-family: $second-font-family;
+  text-decoration: none;
+  list-style: none;
+  cursor: pointer;
+}
+
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+
+  &.menu {
+    display: flex;
+  }
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem;
+
+      &:hover {
+        color: $secondary-text-color;
+        @include easeOut();
+      }
+    }
+  }
+
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
+    }
+  }
 }
