--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -30,3 +30,93 @@
     }
   }
 }
+
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: $opacity-color;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-photo,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    // background: darken($color: $primary-color, $amount: 15);
+    list-style: none;
+    transform: translate3d(100%, 0, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  &-photo {
+    background: rgba(15, 15, 14, 0.5);
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    transform: translate3d(0, 0, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+
+    .portrait {
+      width: 270px;
+      height: 270px;
+      background: url("../img/photo.jpg");
+      background-position-x: center;
+      border-radius: 50%;
+      border: solid 5px $text-color;
+    }
+  }
+
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-text-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 25px;
+    padding: 1rem 0;
+    font-weight: 400;
+    text-decoration: none;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-text-color;
+    }
+  }
+}
+
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
+  }
+}
