--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -57,7 +57,7 @@
   &-nav {
     margin: 0;
     padding: 0;
-
+    background: rgba(15, 15, 14, 0.5);
     list-style: none;
     transform: translate3d(100%, 0, 0);
     @include easeOut;
