--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -37,8 +37,8 @@
     transform: translate3d(0, -100%, 0);
 
     .portrait {
-      width: 200px;
-      height: 200px;
+      width: 170px;
+      height: 170px;
     }
   }
 
@@ -53,6 +53,11 @@
       "skill4"
       "skill5";
     grid-template-columns: 1fr;
+  }
+
+  .bio-image {
+    width: 280px;
+    height: 260px;
   }
 
   .skills {
@@ -102,5 +107,9 @@
     .item {
       width: 100%;
     }
+  }
+
+  .boxes {
+    grid-template-columns: 1fr;
   }
 }
